<resources>
    <string name="app_name">Layout Demo</string>

    <!-- Strings used in Constraint layout -->
    <!-- File Source - https://github.com/googlecodelabs/constraint-layout -->
    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="placeholder">Placeholder</string>s
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">f/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>

    <string name="no_image">No Image</string>
    <string name="nested_scroll_text">Tutorialwing.com presents tutorial on NestedScrollView!
        NestedScrollView is just like ScrollView, but it supports acting as both a nested
        scrolling parent and child on both new and old versions of Android. Nested scrolling
        is enabled by default. NestedScrollView is used when there is need for scrolling inside
        another scrolling view. Normally this would be difficult task because system would be
        unable to decide which view to scroll. This is where NestedScrollView comes into role.

        NestedScrollView is used when there is need for scrolling inside
        another scrolling view. Normally this would be difficult task because system would be
        unable to decide which view to scroll. This is where NestedScrollView comes into role.

        Also contains demo for HorizontalScrollView.
        --- End ---
    </string>

</resources>
